fix(kit): `Select`, `ComboBox`, `MultiSelect` cut overflown items with ellipsis

--- a/projects/core/components/primitive-checkbox/primitive-checkbox.style.less
+++ b/projects/core/components/primitive-checkbox/primitive-checkbox.style.less
@@ -6,6 +6,7 @@
 :host {
     display: block;
     font-size: 0;
+    flex-shrink: 0;
 
     &[data-tui-host-size='m'] {
         width: @sizeM;
